added consistency to brand conventions

--- a/src/components/layout/style.scss
+++ b/src/components/layout/style.scss
@@ -1,10 +1,8 @@
 @import "../../display/style/variables";
 
 .header {
-  @include header-height;
   border-bottom: 2px solid $colour3;
-  display: flex;
-  justify-content: space-between;
+  height: $header-height;
   .header-title-box {
     padding-left: $padding1;
     .header-title {
@@ -17,7 +15,9 @@
 }
 
 .mode-toggle {
+  bottom: $padding1;
+  font-size: 42px;
   cursor: pointer;
-  font-size: 30px;
-  padding: 5px $padding1;
+  position: absolute;
+  right: 2%;
 }
